--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -7,19 +7,23 @@
         <span class="icon-bar"></span>
       </a>
       <a class="brand" href="/">Seedbank</a>
+
       <div class="container nav-collapse">
         <ul class="nav">
-          <li><%= link_to "Snippets", snippets_path  %></li>
-          <li><%= link_to "Plants", plants_path  %></li>
-          <li><%= link_to "Lot Numbers", lot_numbers_path  %></li>
-          <li><%= link_to "Orders", orders_path  %></li>
-          <li><%= link_to "People", people_path  %></li>
-          <li><%= link_to "Transfers", transfers_path  %></li>
-          <li><%= link_to "Deposits", deposits_path  %></li>
-          <li><%= link_to "Transactions", transactions_path  %></li>
-          <li><%= link_to "Catalogs", catalogs_path  %></li>
+          <li><%= link_to "Snippets", snippets_path %></li>
+          <% if Rails.env.development? %>
+              <li><%= link_to "Plants", plants_path %></li>
+              <li><%= link_to "Lot Numbers", lot_numbers_path %></li>
+              <li><%= link_to "Orders", orders_path %></li>
+              <li><%= link_to "People", people_path %></li>
+              <li><%= link_to "Transfers", transfers_path %></li>
+              <li><%= link_to "Deposits", deposits_path %></li>
+              <li><%= link_to "Transactions", transactions_path %></li>
+              <li><%= link_to "Catalogs", catalogs_path %></li>
+          <% end %>
         </ul>
-      </div><!--/.nav-collapse -->
+      </div>
+      <!--/.nav-collapse -->
     </div>
   </div>
 </div>
