--- a/app/views/catalogs/edit.html.erb
+++ b/app/views/catalogs/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing catalog</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @catalog %> |
-<%= link_to 'Back', catalogs_path %>
+<%- model_class = Catalog -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
