--- a/app/views/catalogs/show.html.erb
+++ b/app/views/catalogs/show.html.erb
@@ -1,25 +1,27 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Catalog -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <b>Lot number:</b>
-  <%= @catalog.lot_number_id %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:lot_number_id) %>:</strong></dt>
+  <dd><%= @catalog.lot_number_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:plant_id) %>:</strong></dt>
+  <dd><%= @catalog.plant_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:qty_in_bank) %>:</strong></dt>
+  <dd><%= @catalog.qty_in_bank %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:qty_on_consignment) %>:</strong></dt>
+  <dd><%= @catalog.qty_on_consignment %></dd>
+</dl>
 
-<p>
-  <b>Plant:</b>
-  <%= @catalog.plant_id %>
-</p>
-
-<p>
-  <b>Qty in bank:</b>
-  <%= @catalog.qty_in_bank %>
-</p>
-
-<p>
-  <b>Qty on consignment:</b>
-  <%= @catalog.qty_on_consignment %>
-</p>
-
-
-<%= link_to 'Edit', edit_catalog_path(@catalog) %> |
-<%= link_to 'Back', catalogs_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              catalogs_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_catalog_path(@catalog), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              catalog_path(@catalog),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
