--- a/app/views/deposits/index.html.erb
+++ b/app/views/deposits/index.html.erb
@@ -1,31 +1,44 @@
-<h1>Listing deposits</h1>
-
-<table>
-  <tr>
-    <th>Lot number</th>
-    <th>Plant</th>
-    <th>Date</th>
-    <th>Qty bank</th>
-    <th>Qty consigned</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @deposits.each do |deposit| %>
-  <tr>
-    <td><%= deposit.lot_number_id %></td>
-    <td><%= deposit.plant_id %></td>
-    <td><%= deposit.date %></td>
-    <td><%= deposit.qty_bank %></td>
-    <td><%= deposit.qty_consigned %></td>
-    <td><%= link_to 'Show', deposit %></td>
-    <td><%= link_to 'Edit', edit_deposit_path(deposit) %></td>
-    <td><%= link_to 'Destroy', deposit, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<%- model_class = Deposit -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:lot_number_id) %></th>
+      <th><%= model_class.human_attribute_name(:plant_id) %></th>
+      <th><%= model_class.human_attribute_name(:date) %></th>
+      <th><%= model_class.human_attribute_name(:qty_bank) %></th>
+      <th><%= model_class.human_attribute_name(:qty_consigned) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @deposits.each do |deposit| %>
+      <tr>
+        <td><%= link_to deposit.id, deposit_path(deposit) %></td>
+        <td><%= deposit.lot_number_id %></td>
+        <td><%= deposit.plant_id %></td>
+        <td><%= deposit.date %></td>
+        <td><%= deposit.qty_bank %></td>
+        <td><%= deposit.qty_consigned %></td>
+        <td><%=l deposit.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_deposit_path(deposit), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      deposit_path(deposit),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Deposit', new_deposit_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_deposit_path,
+            :class => 'btn btn-primary' %>
