--- a/app/views/deposits/show.html.erb
+++ b/app/views/deposits/show.html.erb
@@ -1,30 +1,29 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Deposit -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <b>Lot number:</b>
-  <%= @deposit.lot_number_id %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:lot_number_id) %>:</strong></dt>
+  <dd><%= @deposit.lot_number_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:plant_id) %>:</strong></dt>
+  <dd><%= @deposit.plant_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:date) %>:</strong></dt>
+  <dd><%= @deposit.date %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:qty_bank) %>:</strong></dt>
+  <dd><%= @deposit.qty_bank %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:qty_consigned) %>:</strong></dt>
+  <dd><%= @deposit.qty_consigned %></dd>
+</dl>
 
-<p>
-  <b>Plant:</b>
-  <%= @deposit.plant_id %>
-</p>
-
-<p>
-  <b>Date:</b>
-  <%= @deposit.date %>
-</p>
-
-<p>
-  <b>Qty bank:</b>
-  <%= @deposit.qty_bank %>
-</p>
-
-<p>
-  <b>Qty consigned:</b>
-  <%= @deposit.qty_consigned %>
-</p>
-
-
-<%= link_to 'Edit', edit_deposit_path(@deposit) %> |
-<%= link_to 'Back', deposits_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              deposits_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_deposit_path(@deposit), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              deposit_path(@deposit),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
