--- a/app/views/lot_numbers/_form.html.erb
+++ b/app/views/lot_numbers/_form.html.erb
@@ -1,33 +1,32 @@
-<%= form_for(@lot_number) do |f| %>
-  <% if @lot_number.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@lot_number.errors.count, "error") %> prohibited this lot_number from being saved:</h2>
-
-      <ul>
-      <% @lot_number.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @lot_number, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :number, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :number, :class => 'text_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :region, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :region, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :provenance, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :provenance, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :location, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :location, :class => 'text_field' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :number %><br />
-    <%= f.text_field :number %>
-  </div>
-  <div class="field">
-    <%= f.label :region %><br />
-    <%= f.text_field :region %>
-  </div>
-  <div class="field">
-    <%= f.label :provenance %><br />
-    <%= f.text_field :provenance %>
-  </div>
-  <div class="field">
-    <%= f.label :location %><br />
-    <%= f.text_field :location %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                lot_numbers_path, :class => 'btn' %>
   </div>
 <% end %>
