--- a/app/views/lot_numbers/edit.html.erb
+++ b/app/views/lot_numbers/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing lot_number</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @lot_number %> |
-<%= link_to 'Back', lot_numbers_path %>
+<%- model_class = LotNumber -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
