--- a/app/views/lot_numbers/show.html.erb
+++ b/app/views/lot_numbers/show.html.erb
@@ -1,25 +1,27 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = LotNumber -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <b>Number:</b>
-  <%= @lot_number.number %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:number) %>:</strong></dt>
+  <dd><%= @lot_number.number %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:region) %>:</strong></dt>
+  <dd><%= @lot_number.region %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:provenance) %>:</strong></dt>
+  <dd><%= @lot_number.provenance %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:location) %>:</strong></dt>
+  <dd><%= @lot_number.location %></dd>
+</dl>
 
-<p>
-  <b>Region:</b>
-  <%= @lot_number.region %>
-</p>
-
-<p>
-  <b>Provenance:</b>
-  <%= @lot_number.provenance %>
-</p>
-
-<p>
-  <b>Location:</b>
-  <%= @lot_number.location %>
-</p>
-
-
-<%= link_to 'Edit', edit_lot_number_path(@lot_number) %> |
-<%= link_to 'Back', lot_numbers_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              lot_numbers_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_lot_number_path(@lot_number), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              lot_number_path(@lot_number),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
