--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,29 +1,19 @@
-<%= form_for(@order) do |f| %>
-  <% if @order.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
+<%= nested_form_for(@order) do |f| %>
 
-      <ul>
-      <% @order.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+    <div class="field">
+      <%= f.label :number %>
+      <br/>
+      <%= f.text_field :number %>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :number %><br />
-    <%= f.text_field :number %>
-  </div>
-  <div class="field">
-    <%= f.label :customer_id %><br />
-    <%= f.number_field :customer_id %>
-  </div>
-  <div class="field">
-    <%= f.label :completed_at %><br />
-    <%= f.datetime_select :completed_at %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
+
+
+    <%= render partial: "customer_data", locals: {f: f} %>
+    <br>
+    <%= render partial: "line_items", locals: {f: f} %>
+
+    <div class="actions">
+      <%= f.submit %>
+    </div>
 <% end %>
