--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,50 +1,37 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Person -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <b>First name:</b>
-  <%= @person.first_name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:first_name) %>:</strong></dt>
+  <dd><%= @person.first_name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:last_name) %>:</strong></dt>
+  <dd><%= @person.last_name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:address_1) %>:</strong></dt>
+  <dd><%= @person.address_1 %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:address_2) %>:</strong></dt>
+  <dd><%= @person.address_2 %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:town) %>:</strong></dt>
+  <dd><%= @person.town %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:postcode) %>:</strong></dt>
+  <dd><%= @person.postcode %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:email) %>:</strong></dt>
+  <dd><%= @person.email %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:phone) %>:</strong></dt>
+  <dd><%= @person.phone %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:type) %>:</strong></dt>
+  <dd><%= @person.type %></dd>
+</dl>
 
-<p>
-  <b>Last name:</b>
-  <%= @person.last_name %>
-</p>
-
-<p>
-  <b>Address 1:</b>
-  <%= @person.address_1 %>
-</p>
-
-<p>
-  <b>Address 2:</b>
-  <%= @person.address_2 %>
-</p>
-
-<p>
-  <b>Town:</b>
-  <%= @person.town %>
-</p>
-
-<p>
-  <b>Postcode:</b>
-  <%= @person.postcode %>
-</p>
-
-<p>
-  <b>Email:</b>
-  <%= @person.email %>
-</p>
-
-<p>
-  <b>Phone:</b>
-  <%= @person.phone %>
-</p>
-
-<p>
-  <b>Type:</b>
-  <%= @person.type %>
-</p>
-
-
-<%= link_to 'Edit', edit_person_path(@person) %> |
-<%= link_to 'Back', people_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              people_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_person_path(@person), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              person_path(@person),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
