--- a/app/views/plants/_form.html.erb
+++ b/app/views/plants/_form.html.erb
@@ -1,33 +1,32 @@
-<%= form_for(@plant) do |f| %>
-  <% if @plant.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@plant.errors.count, "error") %> prohibited this plant from being saved:</h2>
-
-      <ul>
-      <% @plant.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @plant, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :species, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :species, :class => 'text_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :common_name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :common_name, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :price_paid, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :price_paid, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :price_charged, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :price_charged, :class => 'text_field' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :species %><br />
-    <%= f.text_field :species %>
-  </div>
-  <div class="field">
-    <%= f.label :common_name %><br />
-    <%= f.text_field :common_name %>
-  </div>
-  <div class="field">
-    <%= f.label :price_paid %><br />
-    <%= f.text_field :price_paid %>
-  </div>
-  <div class="field">
-    <%= f.label :price_charged %><br />
-    <%= f.text_field :price_charged %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                plants_path, :class => 'btn' %>
   </div>
 <% end %>
