--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -1,29 +1,42 @@
-<h1>Listing plants</h1>
-
-<table>
-  <tr>
-    <th>Species</th>
-    <th>Common name</th>
-    <th>Price paid</th>
-    <th>Price charged</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @plants.each do |plant| %>
-  <tr>
-    <td><%= plant.species %></td>
-    <td><%= plant.common_name %></td>
-    <td><%= plant.price_paid %></td>
-    <td><%= plant.price_charged %></td>
-    <td><%= link_to 'Show', plant %></td>
-    <td><%= link_to 'Edit', edit_plant_path(plant) %></td>
-    <td><%= link_to 'Destroy', plant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<%- model_class = Plant -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:species) %></th>
+      <th><%= model_class.human_attribute_name(:common_name) %></th>
+      <th><%= model_class.human_attribute_name(:price_paid) %></th>
+      <th><%= model_class.human_attribute_name(:price_charged) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @plants.each do |plant| %>
+      <tr>
+        <td><%= link_to plant.id, plant_path(plant) %></td>
+        <td><%= plant.species %></td>
+        <td><%= plant.common_name %></td>
+        <td><%= plant.price_paid %></td>
+        <td><%= plant.price_charged %></td>
+        <td><%=l plant.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_plant_path(plant), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      plant_path(plant),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Plant', new_plant_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_plant_path,
+            :class => 'btn btn-primary' %>
