--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -1,25 +1,27 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Plant -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <b>Species:</b>
-  <%= @plant.species %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:species) %>:</strong></dt>
+  <dd><%= @plant.species %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:common_name) %>:</strong></dt>
+  <dd><%= @plant.common_name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:price_paid) %>:</strong></dt>
+  <dd><%= @plant.price_paid %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:price_charged) %>:</strong></dt>
+  <dd><%= @plant.price_charged %></dd>
+</dl>
 
-<p>
-  <b>Common name:</b>
-  <%= @plant.common_name %>
-</p>
-
-<p>
-  <b>Price paid:</b>
-  <%= @plant.price_paid %>
-</p>
-
-<p>
-  <b>Price charged:</b>
-  <%= @plant.price_charged %>
-</p>
-
-
-<%= link_to 'Edit', edit_plant_path(@plant) %> |
-<%= link_to 'Back', plants_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              plants_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_plant_path(@plant), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              plant_path(@plant),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
