--- a/app/views/layouts/v2/_head.html.erb
+++ b/app/views/layouts/v2/_head.html.erb
@@ -3,9 +3,10 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-
 <%= yield :meta %>
 
+<!--Google Map-->
+<!--Google Map-->
 
 
 <!--Google Map-->
