--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -23,7 +23,7 @@
         <td><%=l order.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_order_path(order), :class => 'btn btn-mini' %>
+                      edit_order_path(order), :class => 'btn btn-mini btn-primary' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       order_path(order),
                       :method => :delete,
