--- a/app/views/deposits/index.html.erb
+++ b/app/views/deposits/index.html.erb
@@ -27,7 +27,7 @@
         <td><%=l deposit.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_deposit_path(deposit), :class => 'btn btn-mini' %>
+                      edit_deposit_path(deposit), :class => 'btn btn-mini btn-primary' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       deposit_path(deposit),
                       :method => :delete,
