--- a/app/views/layouts/v2/_footer.html.erb
+++ b/app/views/layouts/v2/_footer.html.erb
@@ -4,72 +4,72 @@
   <!-- Top -->
   <!--<div class="top">-->
 
-    <!--&lt;!&ndash; Container &ndash;&gt;-->
-    <!--<div class="container">-->
+  <!--&lt;!&ndash; Container &ndash;&gt;-->
+  <!--<div class="container">-->
 
-      <!--&lt;!&ndash; Row &ndash;&gt;-->
-      <!--<div class="row">-->
+  <!--&lt;!&ndash; Row &ndash;&gt;-->
+  <!--<div class="row">-->
 
-        <!--&lt;!&ndash; Column &ndash;&gt;-->
-        <!--<div class="col-sm-3 col-md-3">-->
-          <!--<h5>accepted payments</h5>-->
-          <!--<ul class="payment-methods clearfix">-->
-            <!--<li><img alt="card" src="/assets/v2/cards/visa.png"></li>-->
-            <!--<li><img alt="card" src="/assets/v2/cards/paypal.png"></li>-->
-            <!--<li><img alt="card" src="/assets/v2/cards/amazon.png"></li>-->
-            <!--<li><img alt="card" src="/assets/v2/cards/express.png"></li>-->
-            <!--<li><img alt="card" src="/assets/v2/cards/mastercard.png"></li>-->
-            <!--<li><img alt="card" src="/assets/v2/cards/google.png"></li>-->
-            <!--<li><img alt="card" src="/assets/v2/cards/cirrus.png"></li>-->
-            <!--<li><img alt="card" src="/assets/v2/cards/discover.png"></li>-->
-            <!--<li><img alt="card" src="/assets/v2/cards/obopay.png"></li>-->
-            <!--<li><img alt="card" src="/assets/v2/cards/visa-debit.png"></li>-->
-            <!--<li><img alt="card" src="/assets/v2/cards/moneybookers.png"></li>-->
-            <!--<li><img alt="card" src="/assets/v2/cards/visa-electron.png"></li>-->
-          <!--</ul>-->
-        <!--</div>-->
-        <!--&lt;!&ndash; Column /END &ndash;&gt;-->
+  <!--&lt;!&ndash; Column &ndash;&gt;-->
+  <!--<div class="col-sm-3 col-md-3">-->
+  <!--<h5>accepted payments</h5>-->
+  <!--<ul class="payment-methods clearfix">-->
+  <!--<li><img alt="card" src="/assets/v2/cards/visa.png"></li>-->
+  <!--<li><img alt="card" src="/assets/v2/cards/paypal.png"></li>-->
+  <!--<li><img alt="card" src="/assets/v2/cards/amazon.png"></li>-->
+  <!--<li><img alt="card" src="/assets/v2/cards/express.png"></li>-->
+  <!--<li><img alt="card" src="/assets/v2/cards/mastercard.png"></li>-->
+  <!--<li><img alt="card" src="/assets/v2/cards/google.png"></li>-->
+  <!--<li><img alt="card" src="/assets/v2/cards/cirrus.png"></li>-->
+  <!--<li><img alt="card" src="/assets/v2/cards/discover.png"></li>-->
+  <!--<li><img alt="card" src="/assets/v2/cards/obopay.png"></li>-->
+  <!--<li><img alt="card" src="/assets/v2/cards/visa-debit.png"></li>-->
+  <!--<li><img alt="card" src="/assets/v2/cards/moneybookers.png"></li>-->
+  <!--<li><img alt="card" src="/assets/v2/cards/visa-electron.png"></li>-->
+  <!--</ul>-->
+  <!--</div>-->
+  <!--&lt;!&ndash; Column /END &ndash;&gt;-->
 
-        <!--&lt;!&ndash; Column &ndash;&gt;-->
-        <!--<div class="col-sm-3 col-md-3">-->
-          <!--<h5>latest tweets</h5>-->
+  <!--&lt;!&ndash; Column &ndash;&gt;-->
+  <!--<div class="col-sm-3 col-md-3">-->
+  <!--<h5>latest tweets</h5>-->
 
-          <!--<div id="footer-tweets"></div>-->
-        <!--</div>-->
-        <!--&lt;!&ndash; Column /END &ndash;&gt;-->
+  <!--<div id="footer-tweets"></div>-->
+  <!--</div>-->
+  <!--&lt;!&ndash; Column /END &ndash;&gt;-->
 
-        <!--&lt;!&ndash; Column &ndash;&gt;-->
-        <!--<div class="col-sm-3 col-md-3">-->
-          <!--<h5>Information</h5>-->
-          <!--<ul class="links underline">-->
-            <!--<li><a href="#">About Us</a></li>-->
-            <!--<li><a href="#">Delivery Information</a></li>-->
-            <!--<li><a href="#">Privacy Policy</a></li>-->
-            <!--<li><a href="#">Terms &amp; Conditions</a></li>-->
-          <!--</ul>-->
-        <!--</div>-->
-        <!--&lt;!&ndash; Column /END &ndash;&gt;-->
+  <!--&lt;!&ndash; Column &ndash;&gt;-->
+  <!--<div class="col-sm-3 col-md-3">-->
+  <!--<h5>Information</h5>-->
+  <!--<ul class="links underline">-->
+  <!--<li><a href="#">About Us</a></li>-->
+  <!--<li><a href="#">Delivery Information</a></li>-->
+  <!--<li><a href="#">Privacy Policy</a></li>-->
+  <!--<li><a href="#">Terms &amp; Conditions</a></li>-->
+  <!--</ul>-->
+  <!--</div>-->
+  <!--&lt;!&ndash; Column /END &ndash;&gt;-->
 
-        <!--&lt;!&ndash; Column &ndash;&gt;-->
-        <!--<div class="col-sm-3 col-md-3">-->
-          <!--<h5>newsletter</h5>-->
+  <!--&lt;!&ndash; Column &ndash;&gt;-->
+  <!--<div class="col-sm-3 col-md-3">-->
+  <!--<h5>newsletter</h5>-->
 
-          <!--<p>Get the latest news and updates delivered straight to your email.</p>-->
+  <!--<p>Get the latest news and updates delivered straight to your email.</p>-->
 
-          <!--<div class="input-group newsletter-signup">-->
-            <!--<input type="text" class="form-control" placeholder="Email Address">-->
-                  <!--<span class="input-group-btn">-->
-                    <!--<button class="btn btn-primary" type="button">sign up</button>-->
-                  <!--</span>-->
-          <!--</div>-->
-        <!--</div>-->
-        <!--&lt;!&ndash; Column /END &ndash;&gt;-->
+  <!--<div class="input-group newsletter-signup">-->
+  <!--<input type="text" class="form-control" placeholder="Email Address">-->
+  <!--<span class="input-group-btn">-->
+  <!--<button class="btn btn-primary" type="button">sign up</button>-->
+  <!--</span>-->
+  <!--</div>-->
+  <!--</div>-->
+  <!--&lt;!&ndash; Column /END &ndash;&gt;-->
 
-      <!--</div>-->
-      <!--&lt;!&ndash; /Row &ndash;&gt;-->
+  <!--</div>-->
+  <!--&lt;!&ndash; /Row &ndash;&gt;-->
 
-    <!--</div>-->
-    <!--&lt;!&ndash; /Container &ndash;&gt;-->
+  <!--</div>-->
+  <!--&lt;!&ndash; /Container &ndash;&gt;-->
 
   <!--</div>-->
   <!-- /Top -->
@@ -81,12 +81,12 @@
     <div class="container">
 
       <ul class="social-buttons colored-bg-on-hover round clearfix">
-        <li><a href="https://www.facebook.com/instakolik"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="https://twitter.com/instakolikcom"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="https://instagram.com/instakolikcom"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="https://instagram.com/"><i class="fa fa-instagram"></i></a></li>
       </ul>
 
-      <span class="copy-text">Copyright &copy; 2014 InstaKolik.com. All rights reserved.</span>
+      <span class="copy-text">Copyright &copy; 2014 SeedBank All rights reserved.</span>
 
     </div>
     <!-- /Container -->
