--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,5 +1,7 @@
 <%- model_class = Person -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+  <h1><%= t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
 </div>
-<%= render :partial => 'form' %>
+<%= form_for @person, url: person_path, :html => {:class => 'form-horizontal'} do |f| %>
+    <%= render :partial => 'form', locals: {f: f} %>
+<% end %>
