--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,49 +1,45 @@
 <%- model_class = Person -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <h1><%= t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
 <table class="table table-striped">
   <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:first_name) %></th>
-      <th><%= model_class.human_attribute_name(:last_name) %></th>
-      <th><%= model_class.human_attribute_name(:address_1) %></th>
-      <th><%= model_class.human_attribute_name(:address_2) %></th>
-      <th><%= model_class.human_attribute_name(:town) %></th>
-      <th><%= model_class.human_attribute_name(:postcode) %></th>
-      <th><%= model_class.human_attribute_name(:email) %></th>
-      <th><%= model_class.human_attribute_name(:phone) %></th>
-      <th><%= model_class.human_attribute_name(:type) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
+  <tr>
+    <th><%= model_class.human_attribute_name(:first_name) %></th>
+    <th><%= model_class.human_attribute_name(:last_name) %></th>
+    <th><%= "Address" %></th>
+    <th><%= model_class.human_attribute_name(:town) %></th>
+    <th><%= model_class.human_attribute_name(:postcode) %></th>
+    <th><%= model_class.human_attribute_name(:email) %></th>
+    <th><%= model_class.human_attribute_name(:phone) %></th>
+    <th><%= model_class.human_attribute_name(:type) %></th>
+    <th><%= t '.actions', :default => t("helpers.actions") %></th>
+  </tr>
   </thead>
   <tbody>
-    <% @people.each do |person| %>
+  <% @people.each do |person| %>
       <tr>
-        <td><%= link_to person.id, person_path(person) %></td>
         <td><%= person.first_name %></td>
         <td><%= person.last_name %></td>
-        <td><%= person.address_1 %></td>
-        <td><%= person.address_2 %></td>
+        <td><%= person.address_1 %>
+          <br><%= person.address_2 %>
+        </td>
         <td><%= person.town %></td>
         <td><%= person.postcode %></td>
         <td><%= person.email %></td>
         <td><%= person.phone %></td>
         <td><%= person.type %></td>
-        <td><%=l person.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_person_path(person), :class => 'btn btn-mini btn-primary' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       person_path(person),
                       :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :data => {:confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?'))},
                       :class => 'btn btn-mini btn-danger' %>
         </td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
