--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -2,4 +2,8 @@
 <div class="page-header">
   <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
 </div>
-<%= render :partial => 'form' %>
+
+<%= form_for @person, :html => {:class => 'form-horizontal'} do |f| %>
+    <%= render :partial => 'form', locals: {f: f} %>
+<% end %>
+
