--- a/app/views/layouts/v2/_navbar.html.erb
+++ b/app/views/layouts/v2/_navbar.html.erb
@@ -67,7 +67,7 @@
               <li><%= link_to "Orders", orders_path %></li>
               <li><%= link_to "People", people_path %></li>
               <!--<li><%= link_to "Transfers", transfers_path %></li>-->
-              <li><%= link_to "Deposits", deposits_path %></li>
+              <li><%= link_to "FDAs", deposits_path %></li>
               <!--<li><%= link_to "Transactions", transactions_path %></li>-->
               <li>
                 <a href="<%= destroy_user_session_path %>" data-method="delete"><i class="icon fa fa-sign-out"></i>Logout</a>
