--- a/app/views/layouts/v2/customer/_navbar.html.erb
+++ b/app/views/layouts/v2/customer/_navbar.html.erb
@@ -1,4 +1,4 @@
-<li><%= link_to "New Order", new_customer_order_form_path %></li>
+<li><%= link_to "Orders", customer_orders_path %></li>
 <li><%= link_to "Profile", customer_profile_path %></li>
 <li>
   <a href="<%= destroy_user_session_path %>" data-method="delete"><i class="icon fa fa-sign-out"></i>Logout</a>
