--- a/app/views/customer/order_forms/_seeding.html.erb
+++ b/app/views/customer/order_forms/_seeding.html.erb
@@ -49,7 +49,7 @@
 
 
 <div class="form-group">
-  <%= f.label :hectare, class: "col-sm-2" %>
+  <%= f.label :hectare, class: "col-sm-" %>
   <div class="col-sm-2">
     <%= f.text_field :hectare, class: "form-control" %>
   </div>
@@ -87,7 +87,7 @@
 
 <hr>
 <div class="col-sm-10">
-  <%= render partial: "items", locals: {grams: false} %>
+  <%= render partial: "items" %>
 </div>
 
 
