--- a/app/views/customer/order_forms/profile.html.erb
+++ b/app/views/customer/order_forms/profile.html.erb
@@ -50,7 +50,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= f.submit "Save", :class => 'btn btn-success' %>
     </div>
 
 <% end %>
