--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
           <div class="page-info clearfix usermenu">
             <h3 style="color: white;">
               <%= yield :page_title %>
-              <small><%= yield :link %></small>
+              <small class="pull-right" style=" margin-bottom: 15px; "><%= yield :page_link %></small>
             </h3>
           </div>
           <!-- /Page-info -->
