--- a/app/views/customer/order_forms/_seeding.html.erb
+++ b/app/views/customer/order_forms/_seeding.html.erb
@@ -87,7 +87,7 @@
 
 <hr>
 <div class="col-sm-10">
-  <%= render partial: "items" %>
+  <%= render partial: "items", locals: {grams: false} %>
 </div>
 
 
