--- a/app/views/customer/order_forms/_seeding.html.erb
+++ b/app/views/customer/order_forms/_seeding.html.erb
@@ -49,7 +49,7 @@
 
 
 <div class="form-group">
-  <%= f.label :hectare, class: "col-sm-" %>
+  <%= f.label :hectare, class: "col-sm-2" %>
   <div class="col-sm-2">
     <%= f.text_field :hectare, class: "form-control" %>
   </div>
