--- a/app/views/shared/_order_form_modal.html.erb
+++ b/app/views/shared/_order_form_modal.html.erb
@@ -4,7 +4,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-            <h4 id="select-modal-header">Order Form</h4>
+            <h4 id="select-modal-header"><%= order_form.type.demodulize %> Order Form</h4>
           </div>
           <div id="dynamic-content">
             <div id="select-modal-body" class="modal-body">
