--- a/app/views/admin/orders/_customer_data.html.erb
+++ b/app/views/admin/orders/_customer_data.html.erb
@@ -80,3 +80,7 @@
     <% end %>
   </div>
 </fieldset>
+
+<script>
+    $("#new_customer_fields").find('input,select').attr('disabled', true);
+</script>
