--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -2,7 +2,13 @@
     <%= render partial: "customer_data", locals: {f: f} %>
     <br>
     <%= render partial: "line_items", locals: {f: f} %>
-
+    <br>
+    <div>
+      <label><%= f.radio_button :state_event, "pend", checked: (f.object.state == "pending") %> Pending</label>
+      <label><%= f.radio_button :state_event, "process", checked: (f.object.state == "processed") %> Processed</label>
+      <label><%= f.radio_button :state_event, "complete", checked: (f.object.state == "completed") %> Completed</label>
+    </div>
+    <br>
     <div class="actions">
       <%= f.submit %>
     </div>
