--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -5,7 +5,7 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:state) %></th>
       <th><%= model_class.human_attribute_name(:number) %></th>
       <th><%= model_class.human_attribute_name(:customer_id) %></th>
       <th><%= model_class.human_attribute_name(:completed_at) %></th>
@@ -16,9 +16,9 @@
   <tbody>
     <% @orders.each do |order| %>
       <tr>
-        <td><%= link_to order.id, admin_order_path(order) %></td>
+        <td><%= order.state %></td>
         <td><%= order.number %></td>
-        <td><%= order.customer_id %></td>
+        <td><%= order.customer.try(:full_name) %></td>
         <td><%= order.completed_at %></td>
         <td><%=l order.created_at %></td>
         <td>
