adds excel header

--- a/app/views/home/catalogue.html.erb
+++ b/app/views/home/catalogue.html.erb
@@ -3,9 +3,11 @@
 </div>
 <!-- /Row-->
 
+<%= render partial: "table_header" %>
+
 <table class="table table-bordered">
   <thead>
-  <tr>
+  <tr class="bold-black">
     <th colspan="2">SEED CATALOGUE</th>
     <th>SPA - Seed Production Area</th>
     <th></th>
@@ -15,7 +17,7 @@
     <th> >500</th>
   </tr>
 
-  <tr>
+  <tr class="bold-black">
     <th>Lot No</th>
     <th>Botanical Name</th>
     <th>Common Name</th>
