--- a/app/views/layouts/v2/admin/_navbar.html.erb
+++ b/app/views/layouts/v2/admin/_navbar.html.erb
@@ -9,7 +9,7 @@
     <li><%= link_to "People", admin_people_path %></li>
     <li><%= link_to "Users", admin_users_path %></li>
     <!--<li><%= link_to "Transfers", admin_transfers_path %></li>-->
-    <li><%= link_to "FDs", admin_deposits_path %></li>
+    <li><%= link_to "Field Data Sheets", admin_deposits_path %></li>
     <!--<li><%= link_to "Transactions", admin_transactions_path %></li>-->
 
     <li><%= link_to "CMS", "/cms-admin", target: "_blank" %></li>
