adds catalogue kinds

--- a/app/views/customer/orders/index.html.erb
+++ b/app/views/customer/orders/index.html.erb
@@ -2,7 +2,7 @@
 <%= content_for :page_link do %>
     <%= link_to "New Order", "#selectModal", "data-toggle" => "modal", class: "btn btn-success" %>
 <% end %>
-<%= render partial: "selection_modal" %>
+<%= render partial: "shared/selection_modal" %>
 
 <table class="table table-striped">
   <thead>
