--- a/app/views/customer/order_forms/_items.html.erb
+++ b/app/views/customer/order_forms/_items.html.erb
@@ -3,9 +3,10 @@
 
   <tr>
     <th>Lot No</th>
+    <th>Heritage Lot No</th>
     <th>Botanical Name</th>
     <th>Provenance</th>
-    <th>Select?</th>
+    <th>Select</th>
   </tr>
   </thead>
 
@@ -13,6 +14,7 @@
   <% Deposit.all.each do |deposit| %>
       <tr>
         <td><%= deposit.display %></td>
+        <td><%= deposit.lot_number.heritage_lot_numbers %></td>
         <td><%= deposit.plant.species %></td>
         <td><%= deposit.lot_number.provenance %></td>
         <td class="col-sm-5">
@@ -20,11 +22,11 @@
             <%= check_box_tag "select", "", false, class: "order_item_check" %>
           </div>
           <div class="col-sm-10" style="display: none;">
-            <%= hidden_field_tag "order_form[order_form_items_attributes][#{deposit.id}][deposit_id]", deposit.id %>
+            <%= hidden_field_tag "order_form[order_form_items_attributes][#{deposit.id}][deposit_id]", deposit.id, disabled: true %>
             <% if grams %>
                 <%= label_tag "Grams", "Grams", class: "col-sm-4" %>
                 <div class="col-sm-8">
-                  <%= text_field_tag "order_form[order_form_items_attributes][#{deposit.id}][grams]", 0, class: "form-control" %>
+                  <%= text_field_tag "order_form[order_form_items_attributes][#{deposit.id}][grams]", 0, class: "form-control", disabled: true %>
                 </div>
             <% end %>
 
