--- a/app/views/customer/order_forms/_nursery.html.erb
+++ b/app/views/customer/order_forms/_nursery.html.erb
@@ -3,7 +3,7 @@
 <div class="form-group">
   <%= f.label :business_name, class: "col-sm-2" %>
   <div class="col-sm-8">
-    <%= f.text_field :business_name, class: "form-control" %>
+    <%= f.text_field :business_name, class: "form-control", validate: true %>
   </div>
 </div>
 
