--- a/app/views/admin/deposits/index.html.erb
+++ b/app/views/admin/deposits/index.html.erb
@@ -6,6 +6,7 @@
               new_admin_deposit_path,
               :class => 'btn btn-primary pull-right' %>
   <div class="clearfix"></div>
+  <%= render partial: "shared/advanced_search" %>
 </div>
 
 <table class="table table-striped">
