--- a/app/views/admin/lot_numbers/index.html.erb
+++ b/app/views/admin/lot_numbers/index.html.erb
@@ -5,11 +5,13 @@
               new_admin_lot_number_path,
               :class => 'btn btn-primary pull-right' %>
   <div class="clearfix"></div>
+  <%= render partial: "shared/advanced_search" %>
 </div>
 <table class="table table-striped">
   <thead>
   <tr>
-    <th><%= model_class.human_attribute_name(:number) %></th>
+    <th><%= "Lot Number" %></th>
+    <th><%= "SPA Name" %></th>
     <th><%= model_class.human_attribute_name(:region) %></th>
     <th><%= model_class.human_attribute_name(:provenance) %></th>
     <th><%= model_class.human_attribute_name(:location) %></th>
@@ -20,6 +22,7 @@
   <% @lot_numbers.each do |lot_number| %>
       <tr>
         <td><%= lot_number.number %></td>
+        <td><%= lot_number.heritage_lot_numbers %></td>
         <td><%= lot_number.region %></td>
         <td><%= lot_number.provenance %></td>
         <td><%= lot_number.location %></td>
