--- a/app/views/admin/people/index.html.erb
+++ b/app/views/admin/people/index.html.erb
@@ -5,8 +5,7 @@
   <%= link_to t('.new', :default => t("helpers.links.new")),
               new_admin_person_path,
               :class => 'btn btn-primary' %>
-
-
+  <%= render partial: "shared/advanced_search" %>
 </div>
 <table class="table table-striped">
   <thead>
